<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:padding="@dimen/_10sdp"
            android:src="@drawable/ic_launcher_background" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="top"
        android:orientation="vertical">

        <TextView
            android:id="@+id/type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@drawable/design1"
            android:gravity="center"
            android:paddingLeft="@dimen/_8sdp"
            android:paddingRight="@dimen/_8sdp"
            android:text="@string/uzbekistan_news"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:singleLine="true"
            android:text="@string/_5_symptoms_of_corona_virus"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp" />

        <TextView
            android:id="@+id/more"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/read_more"
            android:textColor="#FF575F"
            android:textSize="@dimen/_12sdp" />

    </LinearLayout>

</LinearLayout>