<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/_125sdp"
    android:layout_height="@dimen/_150sdp"
    android:layout_marginLeft="@dimen/_12sdp"
    android:layout_marginTop="@dimen/_6sdp"
    android:layout_marginRight="@dimen/_12sdp"
    android:layout_marginBottom="@dimen/_6sdp"
    android:clickable="true"
    android:foreground="?selectableItemBackground"
    app:cardCornerRadius="@dimen/_8sdp"
    app:cardPreventCornerOverlap="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/ic_launcher_background" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingStart="@dimen/_12sdp"
            android:paddingEnd="@dimen/_5sdp">

            <TextView
                android:id="@+id/tv1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/use_mask"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:text="@string/lorem_ipsum_dolor_sit_amet"
                android:textSize="@dimen/_12sdp" />

        </LinearLayout>

    </LinearLayout>


</androidx.cardview.widget.CardView>