<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_250sdp"
    android:layout_marginLeft="@dimen/_15sdp"
    android:layout_marginTop="@dimen/_7sdp"
    android:layout_marginRight="@dimen/_15sdp"
    android:layout_marginBottom="@dimen/_7sdp"
    app:cardCornerRadius="@dimen/_8sdp"
    app:cardElevation="@dimen/_5sdp"
    app:cardPreventCornerOverlap="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher_background" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:paddingStart="@dimen/_20sdp"
                android:paddingTop="@dimen/_12sdp"
                android:paddingEnd="@dimen/_20sdp"
                android:text="@string/coronavirus_a_visual_guide_to_the_pandemic"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:paddingStart="@dimen/_20sdp"
                android:paddingEnd="@dimen/_20sdp"
                android:text="@string/asd"
                android:textSize="@dimen/_12sdp" />


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_30sdp"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_read_more" />


        </LinearLayout>

    </LinearLayout>


</androidx.cardview.widget.CardView>