<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/fragment_home_scene"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/toolbar_design"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="@dimen/_10sdp"
                    android:paddingRight="@dimen/_10sdp"
                    android:text="@string/covid_19"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_20sdp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="right"
                tools:ignore="RtlHardcoded">


                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spin1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="-20dp"
                    android:backgroundTint="@color/main"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:listitem="@layout/spinner_item" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_10sdp"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_10sdp"
                android:text="@string/bar"
                android:textColor="@color/white"
                android:textSize="@dimen/_18sdp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_5sdp"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_10sdp"
                android:text="@string/foo"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/_15sdp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_25sdp"
            android:gravity="center">

            <androidx.cardview.widget.CardView
                android:id="@+id/call"
                android:layout_width="@dimen/_140sdp"
                android:layout_height="@dimen/_35sdp"
                android:clickable="true"
                android:foreground="?selectableItemBackground"
                app:cardBackgroundColor="#FF464F"
                app:cardCornerRadius="@dimen/_35sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_call" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:gravity="center"
                        android:text="@string/call_now"
                        android:textColor="@color/white" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/sms"
                android:layout_width="@dimen/_140sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:clickable="true"
                android:foreground="?selectableItemBackground"
                app:cardBackgroundColor="#09B5FF"
                app:cardCornerRadius="@dimen/_35sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_sms" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:gravity="center"
                        android:text="@string/send_sms"
                        android:textColor="@color/white" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>


    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_5sdp"
        android:baselineAligned="false"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll1">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_5sdp"
            android:baselineAligned="false"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll1">


            <LinearLayout
                android:id="@+id/ll2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingLeft="@dimen/_10sdp"
                        android:paddingRight="@dimen/_10sdp"
                        android:text="@string/prevention"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_18sdp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/allPrevention"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="right|center"
                    tools:ignore="RtlHardcoded">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/app_name"
                        android:paddingStart="@dimen/_1sdp"
                        android:paddingEnd="@dimen/_15sdp"
                        android:src="@drawable/ic_arrow" />

                </LinearLayout>


            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvPrevention"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />


            <LinearLayout
                android:id="@+id/ll3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingLeft="@dimen/_10sdp"
                        android:paddingRight="@dimen/_10sdp"
                        android:text="@string/article"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_18sdp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/allArticle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="right|center"
                    tools:ignore="RtlHardcoded">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/app_name"
                        android:paddingStart="@dimen/_1sdp"
                        android:paddingEnd="@dimen/_15sdp"
                        android:src="@drawable/ic_arrow" />

                </LinearLayout>


            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvArticle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />


            <LinearLayout
                android:id="@+id/ll4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:baselineAligned="false"
                app:layout_constraintTop_toBottomOf="@id/rvArticle">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingLeft="@dimen/_10sdp"
                        android:paddingRight="@dimen/_10sdp"
                        android:text="@string/news"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_18sdp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/all_news"
                    android:layout_weight="1"
                    android:gravity="right|center"
                    tools:ignore="RtlHardcoded">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/app_name"
                        android:paddingStart="@dimen/_1sdp"
                        android:paddingEnd="@dimen/_15sdp"
                        android:src="@drawable/ic_arrow" />

                </LinearLayout>


            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvNews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.motion.widget.MotionLayout>