<?xml version="1.0" encoding="utf-8"?><androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="match_parent"    android:layout_height="@dimen/_146sdp"    android:layout_margin="@dimen/_10sdp"    app:cardCornerRadius="@dimen/_8sdp">    <LinearLayout        android:layout_width="match_parent"        android:layout_height="match_parent"        android:baselineAligned="false">        <LinearLayout            android:layout_width="0dp"            android:layout_height="match_parent"            android:layout_weight="2"            android:orientation="vertical">            <LinearLayout                android:layout_width="match_parent"                android:layout_height="0dp"                android:layout_weight="1"                android:orientation="vertical"                tools:ignore="NestedWeights">                <TextView                    android:id="@+id/title"                    android:layout_width="match_parent"                    android:layout_height="wrap_content"                    android:layout_marginTop="@dimen/_10sdp"                    android:maxLines="2"                    android:paddingStart="@dimen/_12sdp"                    android:paddingEnd="@dimen/_5sdp"                    android:text="@string/at_least_23_italian_doctors_have_died"                    android:textColor="@color/black"                    android:textSize="@dimen/_18sdp"                    android:textStyle="bold" />                <TextView                    android:id="@+id/description"                    android:layout_width="match_parent"                    android:layout_height="wrap_content"                    android:maxLines="2"                    android:paddingStart="@dimen/_12sdp"                    android:paddingEnd="@dimen/_15sdp"                    android:singleLine="true"                    android:text="@string/at_least_23_italian_doctors_have_died"                    android:textColor="@color/black"                    android:textSize="@dimen/_14sdp" />            </LinearLayout>            <LinearLayout                android:layout_width="match_parent"                android:layout_height="0dp"                android:layout_weight="1"                android:gravity="bottom"                android:orientation="vertical">                <TextView                    android:layout_width="match_parent"                    android:layout_height="wrap_content"                    android:layout_marginBottom="@dimen/_3sdp"                    android:paddingStart="@dimen/_12sdp"                    android:singleLine="true"                    android:text="@string/bbc_in_covid_news"                    android:textColor="@color/black"                    android:textSize="@dimen/_14sdp"                    android:textStyle="bold"                    tools:ignore="RtlSymmetry" />                <TextView                    android:layout_width="match_parent"                    android:layout_height="wrap_content"                    android:layout_marginBottom="@dimen/_10sdp"                    android:paddingStart="@dimen/_12sdp"                    android:singleLine="true"                    android:text="@string/_17_september_4_min_read"                    android:textColor="@color/black"                    android:textSize="@dimen/_12sdp"                    tools:ignore="RtlSymmetry" />            </LinearLayout>        </LinearLayout>        <LinearLayout            android:layout_width="0dp"            android:layout_height="match_parent"            android:layout_weight="1"            android:orientation="vertical">            <LinearLayout                android:layout_width="match_parent"                android:layout_height="0dp"                android:layout_weight="1"                tools:ignore="NestedWeights">                <androidx.cardview.widget.CardView                    android:layout_width="match_parent"                    android:layout_height="match_parent"                    android:layout_margin="@dimen/_10sdp"                    app:cardCornerRadius="4dp">                    <ImageView                        android:id="@+id/image"                        android:layout_width="match_parent"                        android:layout_height="match_parent"                        android:contentDescription="@string/app_name"                        android:scaleType="centerCrop"                        android:src="@drawable/ic_launcher_background" />                </androidx.cardview.widget.CardView>            </LinearLayout>            <LinearLayout                android:layout_width="match_parent"                android:layout_height="0dp"                android:layout_weight="1"                android:gravity="center">                <ImageView                    android:layout_width="wrap_content"                    android:layout_height="wrap_content"                    android:contentDescription="@string/app_name"                    android:src="@drawable/ic_news2" />                <ImageView                    android:id="@+id/save"                    android:layout_width="wrap_content"                    android:layout_height="wrap_content"                    android:layout_marginStart="@dimen/_15sdp"                    android:contentDescription="@string/app_name"                    android:src="@drawable/ic_saved_selected" />            </LinearLayout>        </LinearLayout>    </LinearLayout></androidx.cardview.widget.CardView>